build/log/idf_py_stdout_output_9116
[1/9] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D C:\Users\DELL\Desktop\esp-iot-solution-master\examples\usb\host\usb_camera_mic_spk\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.3.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/DELL/Desktop/esp-iot-solution-master/examples/usb/host/usb_camera_mic_spk/build/bootloader/bootloader.bin"
Bootloader binary size 0x5490 bytes. 0x2b70 bytes (34%) free.
[2/9] No install step for 'bootloader'
[3/9] Building C object esp-idf/xfer_http/CMakeFiles/__idf_xfer_http.dir/app_httpd.c.obj
FAILED: esp-idf/xfer_http/CMakeFiles/__idf_xfer_http.dir/app_httpd.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.2-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/DELL/Desktop/esp-iot-solution-master/examples/usb/host/usb_camera_mic_spk/build/config -IC:/Users/DELL/Desktop/esp-iot-solution-master/examples/usb/host/usb_camera_mic_spk/components/xfer_http -IC:/Users/DELL/Desktop/esp-iot-solution-master/examples/usb/host/usb_camera_mic_spk/components/xfer_http/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_hw_support/include/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_hw_support/port/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_hw_support/port/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/soc/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/hal/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_rom/include/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_rom/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/xtensa/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_wifi/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_wifi/wifi_apps/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_wifi/wifi_apps/nan_app/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_wifi/include/local -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_phy/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_phy/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_netif/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_timer/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/spi_flash/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_partition/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/esp_http_server/include -IC:/Espressif/frameworks/esp-idf-v5.3.2/components/http_parser -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/DELL/Desktop/esp-iot-solution-master/examples/usb/host/usb_camera_mic_spk=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.3.2=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -Wno-format -MD -MT esp-idf/xfer_http/CMakeFiles/__idf_xfer_http.dir/app_httpd.c.obj -MF esp-idf\xfer_http\CMakeFiles\__idf_xfer_http.dir\app_httpd.c.obj.d -o esp-idf/xfer_http/CMakeFiles/__idf_xfer_http.dir/app_httpd.c.obj -c C:/Users/DELL/Desktop/esp-iot-solution-master/examples/usb/host/usb_camera_mic_spk/components/xfer_http/app_httpd.c
C:/Users/DELL/Desktop/esp-iot-solution-master/examples/usb/host/usb_camera_mic_spk/components/xfer_http/app_httpd.c:31:20: error: redefinition of '_STREAM_CONTENT_TYPE'
   31 | static const char *_STREAM_CONTENT_TYPE = "multipart/x-mixed-replace;boundary=" PART_BOUNDARY;
      |                    ^~~~~~~~~~~~~~~~~~~~
C:/Users/DELL/Desktop/esp-iot-solution-master/examples/usb/host/usb_camera_mic_spk/components/xfer_http/app_httpd.c:14:20: note: previous definition of '_STREAM_CONTENT_TYPE' with type 'const char *'
   14 | static const char* _STREAM_CONTENT_TYPE = "multipart/x-mixed-replace;boundary=" PART_BOUNDARY;
      |                    ^~~~~~~~~~~~~~~~~~~~
C:/Users/DELL/Desktop/esp-iot-solution-master/examples/usb/host/usb_camera_mic_spk/components/xfer_http/app_httpd.c:33:20: error: redefinition of '_STREAM_PART'
   33 | static const char *_STREAM_PART = "Content-Type: image/jpeg\r\nContent-Length: %u\r\nX-Timestamp: %d.%06d\r\n\r\n";
      |                    ^~~~~~~~~~~~
C:/Users/DELL/Desktop/esp-iot-solution-master/examples/usb/host/usb_camera_mic_spk/components/xfer_http/app_httpd.c:15:20: note: previous definition of '_STREAM_PART' with type 'const char *'
   15 | static const char* _STREAM_PART = "\r\n--" PART_BOUNDARY "\r\nContent-Type: image/jpeg\r\nContent-Length: %u\r\n\r\n";
      |                    ^~~~~~~~~~~~
C:/Users/DELL/Desktop/esp-iot-solution-master/examples/usb/host/usb_camera_mic_spk/components/xfer_http/app_httpd.c:140:18: error: redefinition of 'stream_handler'
  140 | static esp_err_t stream_handler(httpd_req_t *req)
      |                  ^~~~~~~~~~~~~~
C:/Users/DELL/Desktop/esp-iot-solution-master/examples/usb/host/usb_camera_mic_spk/components/xfer_http/app_httpd.c:45:18: note: previous definition of 'stream_handler' with type 'esp_err_t(httpd_req_t *)' {aka 'int(struct httpd_req *)'}
   45 | static esp_err_t stream_handler(httpd_req_t *req)
      |                  ^~~~~~~~~~~~~~
C:/Users/DELL/Desktop/esp-iot-solution-master/examples/usb/host/usb_camera_mic_spk/components/xfer_http/app_httpd.c:45:18: warning: 'stream_handler' defined but not used [-Wunused-function]
[4/9] Completed 'bootloader'
ninja: build stopped: subcommand failed.
